# d2l-mcp-server-notion

./: .env.example  .gitignore  Dockerfile  README.md  config.py  d2l_client.py  db.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml  seed.py
test/: test_assignments.py
